# openzone

./: .clang-format  .clang-tidy  .cproject  .editorconfig  .gitignore  .gitmodules  .project  AUTHORS  BUGS  BUGS.md  BUILD.vc2008  BUILDING  CMakeLists.txt  ChangeLog  ChangeLog.md  Doxyfile  INSTALL  MinGW32_toolchain.cmake  PKGBUILD  PREBERI.html  README  README.html  README.md  README.sl  TODO  TODO.md  Toolchain-mingw32.cmake  autogen.sh  benchmark.sh  build-all.sh  build.sh  capture.sh  check.sh  clean-blanks.sh  clean-data.sh  clean-prebuilt.sh  clean.sh  configuration.h.in  configure-all.sh  count.sh  (+42 more)
doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.liboz  Doxyfile.libozdyn  Doxyfile.libozdynamics  MD3.html  PREBERI.html  Quake3BSP.html  README.html  cylinder.maxima  cylinder.wxm  hashspaceUsage.octave  md2.htm  style.css
doc/libs/: COPYING.liboz.txt  COPYING.zlib.txt
doc/licences/: COPYING.PhysFS.txt  COPYING.SDL2.txt  COPYING.SDL_ttf.txt  COPYING.assimp.txt  COPYING.liboz.txt
src/: .gitignore  Build.cc.in  Build.cpp.in  Build.hh  Build.hpp  BuildInfo.cc.in  BuildInfo.hh  CMakeLists.txt  OpenZone.dox  config.h.in  config.hh.in  configuration.h.in  configuration.hh.in  configuration.hpp  configuration.hpp.in  luamacros.h  luamacros.hh  luamacros.hpp  ozCore_pch.cc  ozCore_pch.hh  ozDynamics_pch.cc  ozDynamics_pch.hh  ozEngine_pch.cc  ozEngine_pch.hh  pch.cc  pch.hh  stable.cc  stable.h  stable.hh  stable.hpp
src/arch/: Arch.cpp  Arch.hpp  CMakeLists-gen.sh  CMakeLists.gen  CMakeLists.txt  common.cpp  common.hpp
src/architect/: Architect.cpp  Architect.hpp  CMakeLists.gen  CMakeLists.txt  common.cpp  common.hpp
src/base/: .gitignore  Alloc.cpp  Alloc.h  Array.h  Bitset.h  Bitset.hpp  CMakeLists.gen  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  DArray.h  DList.h  DList.hpp  Exception.h  Exit.cpp  Exit.h  HashIndex.h  HashIndex.hpp  HashString.h  HashString.hpp  List.h  List.hpp  Log.cpp  Log.h  LogFile.cpp  LogFile.h  LogFile.hpp  Map.h  Mat33.h  Mat33.hpp  Mat44.h  Mat44.hpp  Math.cpp  Math.h  Math.hpp  Pair.h  Pool.h  PoolAlloc.h  PoolAlloc.hpp  (+25 more)
src/builder/: AssImp.cc  AssImp.hh  BSP.cc  BSP.hh  Builder.cc  Builder.hh  CMakeLists-gen.sh  CMakeLists.txt  Caelum.cc  Caelum.hh  Class.cc  Class.hh  Compiler.cc  Compiler.hh  Context.cc  Context.hh  FragPool.cc  FragPool.hh  Lingua.cc  Lingua.hh  MD2.cc  MD2.hh  MD3.cc  MD3.hh  OBJ.cc  OBJ.hh  Terra.cc  Terra.hh  UI.cc  UI.hh  common.cc  common.hh  config.hh.in  ozBuild.cc
src/censor/: CMakeLists.gen  CMakeLists.txt  Censor.cpp  Censor.hpp  common.cpp  common.hpp
src/client/: .gitignore  Audio.cc  Audio.cpp  Audio.h  Audio.hh  Audio.hpp  BSP.cc  BSP.cpp  BSP.h  BSP.hh  BSP.hpp  BSPAudio.cc  BSPAudio.hh  BSPImago.cc  BSPImago.hh  BasicAudio.cc  BasicAudio.cpp  BasicAudio.h  BasicAudio.hh  BasicAudio.hpp  BotAudio.cc  BotAudio.cpp  BotAudio.h  BotAudio.hh  BotAudio.hpp  BotProxy.cc  BotProxy.cpp  BotProxy.h  BotProxy.hh  BotProxy.hpp  BuildInfo.cc.in  BuildInfo.hh  CMakeLists-gen.sh  CMakeLists.gen  CMakeLists.txt  Caelum.cc  Caelum.cpp  Caelum.hh  Caelum.hpp  Camera.cc  (+304 more)
src/common/: AABB.cc  AABB.cpp  AABB.hh  AABB.hpp  Automaton.cc  Automaton.hh  Bounds.hh  Bounds.hpp  CMakeLists-gen.sh  CMakeLists.txt  CommonLayer.dox  Lingua.cc  Lingua.hh  Lua.cc  Lua.hh  LuaCommon.cc  LuaCommon.hh  Point.cc  Point.hh  Span.hh  Span.hpp  Timer.cc  Timer.cpp  Timer.hh  Timer.hpp  common.cc  common.cpp  common.hh  common.hpp  lua.cc  lua.hh  luaapi.hh  luabase.cc  luabase.hh  luamacros.hh  pch.hh
src/matrix/: .gitignore  AABB.cc  AABB.cpp  AABB.h  AABB.hh  AABB.hpp  BSP.cc  BSP.cpp  BSP.dox  BSP.h  BSP.hh  BSP.hpp  B_Goblin.cpp  B_Goblin.h  B_Goblin.hpp  B_Human.cpp  B_Human.h  B_Human.hpp  B_Spirit.cpp  B_Spirit.h  B_Spirit.hpp  Bot.cc  Bot.cpp  Bot.h  Bot.hh  Bot.hpp  BotClass.cc  BotClass.cpp  BotClass.dox  BotClass.h  BotClass.hh  BotClass.hpp  Bounds.h  Bounds.hh  Bounds.hpp  CMakeLists-gen.sh  CMakeLists.gen  CMakeLists.txt  Caelum.cc  Caelum.cpp  (+236 more)
src/modules/: CMakeLists-gen.sh  CMakeLists.txt  Module.cc  Module.hh  Modules.cc  Modules.hh  common.hh
src/nirvana/: .gitignore  Automaton.cc  Automaton.hh  CMakeLists-gen.sh  CMakeLists.gen  CMakeLists.txt  Device.cc  Device.cpp  Device.hh  Device.hpp  Lua.cc  Lua.cpp  Lua.h  Lua.hh  Lua.hpp  LuaMind.cc  LuaMind.cpp  LuaMind.h  LuaMind.hh  LuaMind.hpp  LuaNirvana.cc  LuaNirvana.hh  M_Walker.cpp  M_Walker.h  M_Walker.hpp  Meme.cpp  Meme.hpp  Memo.cc  Memo.cpp  Memo.hh  Memo.hpp  Mind.cc  Mind.cpp  Mind.h  Mind.hh  Mind.hpp  Nirvana.cc  Nirvana.cpp  Nirvana.h  Nirvana.hh  (+31 more)
src/oz/: .gitignore  AABB.hh  Alloc.cc  Alloc.cpp  Alloc.h  Alloc.hh  Alloc.hpp  Array.h  Array.hh  Array.hpp  AutoPtr.hpp  Bitset.h  Bitset.hh  Bitset.hpp  Bounds.hh  Buffer.cc  Buffer.cpp  Buffer.hh  Buffer.hpp  BufferStream.hh  BufferStream.hpp  CMakeLists-gen.sh  CMakeLists.gen  CMakeLists.txt  Chain.hh  Config.cc  Config.cpp  Config.h  Config.hh  Config.hpp  DArray.h  DArray.hh  DArray.hpp  DChain.hh  DList.h  DList.hh  DList.hpp  Directory.cpp  Directory.hpp  Endian.hh  (+148 more)
src/ozCore/: Alloc.cc  Alloc.hh  Array.hh  Arrays.hh  Atomic.hh  Barrier.cc  Barrier.hh  Bitset.cc  Bitset.hh  Box.hh  Buffer.cc  Buffer.hh  BufferStream.hh  CMakeLists-gen.sh  CMakeLists.txt  COPYING  CallOnce.cc  CallOnce.hh  Chain.hh  CondVar.cc  CondVar.hh  DArray.hh  DChain.hh  Duration.cc  Duration.hh  Endian.hh  EnumMap.cc  EnumMap.hh  File.cc  File.hh  Gettext.cc  Gettext.hh  HashMap.hh  HashSet.hh  Heap.hh  InputStream.cc  InputStream.hh  Instant.cc  Instant.hh  IteratorBase.hh  (+87 more)
src/ozDynamics/: CMakeLists-gen.sh  CMakeLists.txt  common.hh  config.hh.in  ozDynamics.hh  ozDynamics.pc.in  pch.cc  pch.hh
src/ozEngine/: AL.cc  AL.hh  ALBuffer.cc  ALBuffer.hh  ALSource.cc  ALSource.hh  ALStreamingBuffer.cc  ALStreamingBuffer.hh  Application.cc  Application.hh  Builder.cc  Builder.hh  CMakeLists.txt  COPYING  Cursor.cc  Cursor.hh  Font.cc  Font.hh  GL.cc  GL.hh  GLTexture.cc  GLTexture.hh  Input.cc  Input.hh  Lua.cc  Lua.hh  OpenAL.cc  OpenAL.hh  OpenGL.cc  OpenGL.hh  Pepper.cc  Pepper.hh  Shader.cc  Shader.hh  Window.cc  (+14 more)
(+1051 files in other folders)
