add_library( base STATIC
  Bitset.hpp
  Config.cpp
  Config.hpp
  DList.hpp
  HashIndex.hpp
  HashString.hpp
  List.hpp
  LogFile.cpp
  LogFile.hpp
  Mat33.hpp
  Mat44.hpp
  Math.cpp
  Math.hpp
  PoolAlloc.hpp
  Quat.hpp
  ReuseAlloc.hpp
  SVector.hpp
  Sparse.hpp
  String.hpp
  Vec3.hpp
  Vector.hpp
  base.hpp
  common.hpp )
