add_library( base STATIC
Alloc.cpp
Alloc.h
Array.h
arrays.h
base.h
Bitset.h
common.h
Config.cpp
Config.h
DArray.h
DList.h
Exception.h
HashIndex.h
HashString.h
iterators.h
List.h
Log.cpp
Log.h
Mat33.h
Mat44.h
Math.cpp
Math.h
Pair.h
Pool.h
Quat.h
Sparse.h
String.cpp
String.h
SVector.h
Vec3.h
Vector.h
)
