configure_file( config.hh.in config.hh @ONLY )
configure_file( BuildInfo.cc.in BuildInfo.cc @ONLY )

add_library( client STATIC
  ${CMAKE_CURRENT_BINARY_DIR}/BuildInfo.cc
#BEGIN SOURCES
  Audio.hh
  BasicAudio.hh
  BotAudio.hh
  BSPAudio.hh
  BSP.hh
  BuildInfo.hh
  Caelum.hh
  Camera.hh
  CinematicProxy.hh
  Client.hh
  common.hh
  Context.hh
  EditStage.hh
  eSpeak.hh
  ExplosionImago.hh
  FragPool.hh
  Frustum.hh
  GameStage.hh
  Imago.hh
  Input.hh
  Loader.hh
  luaapi.hh
  LuaClient.hh
  MD2.hh
  MD2Imago.hh
  MD2WeaponImago.hh
  MenuStage.hh
  Mesh.hh
  NaClDownloader.hh
  NaClUpdater.hh
  Network.hh
  openzone.hh
  Profile.hh
  Proxy.hh
  Render.hh
  Shader.hh
  Shape.hh
  SMM.hh
  SMMImago.hh
  SMMVehicleImago.hh
  Sound.hh
  SparkModel.hh
  Stage.hh
  StrategicProxy.hh
  Terra.hh
  UnitProxy.hh
  VehicleAudio.hh
  Audio.cc
  BasicAudio.cc
  BotAudio.cc
  BSPAudio.cc
  BSP.cc
  Caelum.cc
  Camera.cc
  CinematicProxy.cc
  Client.cc
  common.cc
  Context.cc
  EditStage.cc
  eSpeak.cc
  ExplosionImago.cc
  FragPool.cc
  Frustum.cc
  GameStage.cc
  Imago.cc
  Input.cc
  Loader.cc
  luaapi.cc
  LuaClient.cc
  MD2.cc
  MD2Imago.cc
  MD2WeaponImago.cc
  MenuStage.cc
  Mesh.cc
  NaClDownloader.cc
  NaClUpdater.cc
  Network.cc
  Profile.cc
  Proxy.cc
  Render.cc
  Shader.cc
  Shape.cc
  SMM.cc
  SMMImago.cc
  SMMVehicleImago.cc
  Sound.cc
  SparkModel.cc
  Stage.cc
  StrategicProxy.cc
  Terra.cc
  UnitProxy.cc
  VehicleAudio.cc
  ui/Area.hh
  ui/Bar.hh
  ui/BuildFrame.hh
  ui/Button.hh
  ui/CinematicText.hh
  ui/CreditsMenu.hh
  ui/DebugFrame.hh
  ui/Font.hh
  ui/Frame.hh
  ui/GalileoFrame.hh
  ui/HudArea.hh
  ui/InfoFrame.hh
  ui/Inventory.hh
  ui/Label.hh
  ui/LoadingArea.hh
  ui/MainMenu.hh
  ui/MissionMenu.hh
  ui/ModelField.hh
  ui/Mouse.hh
  ui/MusicPlayer.hh
  ui/QuestFrame.hh
  ui/SettingsFrame.hh
  ui/StrategicArea.hh
  ui/Style.hh
  ui/TalkFrame.hh
  ui/Text.hh
  ui/UI.hh
  ui/Area.cc
  ui/Bar.cc
  ui/BuildFrame.cc
  ui/Button.cc
  ui/CinematicText.cc
  ui/CreditsMenu.cc
  ui/DebugFrame.cc
  ui/Font.cc
  ui/Frame.cc
  ui/GalileoFrame.cc
  ui/HudArea.cc
  ui/InfoFrame.cc
  ui/Inventory.cc
  ui/Label.cc
  ui/LoadingArea.cc
  ui/MainMenu.cc
  ui/MissionMenu.cc
  ui/ModelField.cc
  ui/Mouse.cc
  ui/MusicPlayer.cc
  ui/QuestFrame.cc
  ui/SettingsFrame.cc
  ui/StrategicArea.cc
  ui/Style.cc
  ui/TalkFrame.cc
  ui/Text.cc
  ui/UI.cc
#END SOURCES
)

use_pch( client pch )
