configure_file(config.hh.in config.hh @ONLY)
configure_file(BuildInfo.cc.in BuildInfo.cc @ONLY)

add_library(client STATIC
  ${CMAKE_CURRENT_BINARY_DIR}/BuildInfo.cc
#BEGIN SOURCES
  Audio.hh
  BasicAudio.hh
  BotAudio.hh
  BSPAudio.hh
  BSPImago.hh
  BuildInfo.hh
  Caelum.hh
  Camera.hh
  CinematicProxy.hh
  Client.hh
  common.hh
  Context.hh
  EditStage.hh
  eSpeak.hh
  ExplosionImago.hh
  FragPool.hh
  Frustum.hh
  GameStage.hh
  Imago.hh
  Input.hh
  Loader.hh
  luaapi.hh
  LuaClient.hh
  MD2.hh
  MD2Imago.hh
  MD2WeaponImago.hh
  MenuStage.hh
  Model.hh
  NaClDownloader.hh
  NaClUpdater.hh
  Network.hh
  PartClass.hh
  PartGen.hh
  Profile.hh
  Proxy.hh
  Render.hh
  Shader.hh
  Shape.hh
  SMMImago.hh
  SMMVehicleImago.hh
  Sound.hh
  SparkModel.hh
  Stage.hh
  StrategicProxy.hh
  Terra.hh
  UnitProxy.hh
  VehicleAudio.hh
  Audio.cc
  BasicAudio.cc
  BotAudio.cc
  BSPAudio.cc
  BSPImago.cc
  Caelum.cc
  Camera.cc
  CinematicProxy.cc
  Client.cc
  common.cc
  Context.cc
  EditStage.cc
  eSpeak.cc
  ExplosionImago.cc
  FragPool.cc
  Frustum.cc
  GameStage.cc
  Imago.cc
  Input.cc
  Loader.cc
  luaapi.cc
  LuaClient.cc
  MD2.cc
  MD2Imago.cc
  MD2WeaponImago.cc
  MenuStage.cc
  Model.cc
  NaClDownloader.cc
  NaClUpdater.cc
  Network.cc
  PartClass.cc
  PartGen.cc
  Profile.cc
  Proxy.cc
  Render.cc
  Shader.cc
  Shape.cc
  SMMImago.cc
  SMMVehicleImago.cc
  Sound.cc
  SparkModel.cc
  Stage.cc
  StrategicProxy.cc
  Terra.cc
  UnitProxy.cc
  VehicleAudio.cc
  ui/Area.hh
  ui/Bar.hh
  ui/BuildFrame.hh
  ui/Button.hh
  ui/CheckBox.hh
  ui/CinematicText.hh
  ui/CreditsMenu.hh
  ui/DebugFrame.hh
  ui/EditFrame.hh
  ui/Font.hh
  ui/Frame.hh
  ui/GalileoFrame.hh
  ui/HudArea.hh
  ui/InfoFrame.hh
  ui/Inventory.hh
  ui/Label.hh
  ui/LoadingArea.hh
  ui/MainMenu.hh
  ui/MissionMenu.hh
  ui/ModelField.hh
  ui/Mouse.hh
  ui/MusicPlayer.hh
  ui/QuestFrame.hh
  ui/SettingsMenu.hh
  ui/Slider.hh
  ui/StrategicArea.hh
  ui/Style.hh
  ui/TalkFrame.hh
  ui/UI.hh
  ui/Area.cc
  ui/Bar.cc
  ui/BuildFrame.cc
  ui/Button.cc
  ui/CheckBox.cc
  ui/CinematicText.cc
  ui/CreditsMenu.cc
  ui/DebugFrame.cc
  ui/EditFrame.cc
  ui/Font.cc
  ui/Frame.cc
  ui/GalileoFrame.cc
  ui/HudArea.cc
  ui/InfoFrame.cc
  ui/Inventory.cc
  ui/Label.cc
  ui/LoadingArea.cc
  ui/MainMenu.cc
  ui/MissionMenu.cc
  ui/ModelField.cc
  ui/Mouse.cc
  ui/MusicPlayer.cc
  ui/QuestFrame.cc
  ui/SettingsMenu.cc
  ui/Slider.cc
  ui/StrategicArea.cc
  ui/Style.cc
  ui/TalkFrame.cc
  ui/UI.cc
#END SOURCES
)
use_pch(client pch)

if(OZ_DYNAMICS)
  target_link_libraries(client ozDynamics)
endif()
